import { useState } from 'react';
import { expect, userEvent, waitFor, within } from 'storybook/test';
import preview from '.storybook/preview';
import { Button } from '../button/Button';
import { Divider } from '../divider/Divider';
import { Paragraph } from '../typography/paragraph/Paragraph';
import { Textfield } from './Textfield';

const meta = preview.meta({
  component: Textfield,
  tags: ['beta', 'digdir'],
  argTypes: {
    multiline: {
      type: 'boolean',
    },
    // This needs to be explicitly set, otherwise storybook will show "set object"
    type: {
      control: 'select',
      options: [
        /* | "button" */
        /* 'checkbox', */
        'color',
        'date',
        'datetime-local',
        'email',
        'file',
        'hidden',
        /* 'image', */
        'month',
        'number',
        'password',
        /* 'radio', */
        /* | "range" */
        /* | "reset" */
        'search',
        /* | "submit" */
        'tel',
        'text',
        'time',
        'url',
        'week',
      ],
    },
  },
  parameters: {
    componentOrigin: {
      originator: 'digdir',
    },
    layout: 'centered',
  },
});

export const Preview = meta.story({
  args: {
    label: 'Label',
    disabled: false,
    readOnly: false,
    multiline: false,
    description: '',
    error: '',
    counter: 0,
    id: 'textfield-preview',
  },
  play: async ({ canvasElement, step, args }) => {
    const canvas = within(canvasElement);
    const input = await waitFor(() =>
      canvas.getByRole('textbox', {
        name: args.label as string,
      }),
    );

    await step('Label is rendered', async () => {
      const labelElement = canvas.getByText(args.label as string);
      expect(labelElement).toBeInTheDocument();
    });

    await step(
      'Input field is rendered and associated with the label',
      async () => {
        expect(input).toBeInTheDocument();
        expect(input).toHaveAttribute('id', args.id);
      },
    );

    await step('User can focus the text field', async () => {
      await userEvent.click(input);
      expect(input).toHaveFocus();
    });

    await step('User can blur the text field', async () => {
      await userEvent.tab();
      expect(input).not.toHaveFocus();
    });

    if (!args.disabled && !args.readOnly) {
      await step('User can type in the text field', async () => {
        await userEvent.clear(input);
        await userEvent.type(input, 'Hello World');
        expect(input).toHaveValue('Hello World');
      });
    } else {
      await step(
        'Text field is disabled or read-only so it should not be editable',
        async () => {
          expect(input).toBeDisabled();
        },
      );
    }
  },
});

export const Rows = meta.story({
  args: {
    label: 'Beskrivelse',
    multiline: true,
    rows: 4,
    id: 'textfield-rows',
  },
});

export const Affix = meta.story({
  args: {
    prefix: 'NOK',
    suffix: 'pr. mnd',
    label: 'Hvor mange kroner koster det per måned?',
    id: 'textfield-affix',
    inputMode: 'numeric',
  },
});

export const Counter = meta.story({
  render: () => (
    <Textfield
      id="textfield-counter"
      multiline
      rows={4}
      label="Legg til en beskrivelse"
      counter={75}
    />
  ),
});

export const Controlled = meta.story({
  args: {
    label: 'Fullt navn',
    multiline: false,
    id: 'textfield-controlled',
  },
  parameters: {
    customStyles: {
      display: 'flex',
      flexDirection: 'column',
      gap: 'var(--ds-size-2)',
    },
  },
  render: (args) => {
    const [value, setValue] = useState<string>('');
    return (
      <>
        <div
          style={{
            display: 'flex',
            gap: 'var(--ds-size-2)',
            alignItems: 'end',
            width: '100%',
          }}
        >
          <Textfield
            {...args}
            value={value}
            onChange={(
              e: React.ChangeEvent<HTMLInputElement | HTMLTextAreaElement>,
            ) => setValue(e.target.value)}
            style={{ flexGrow: 1 }}
          />
          <Button variant="secondary" onClick={() => setValue('')}>
            Tøm feltet
          </Button>
        </div>
        {value && (
          <>
            <Divider />
            <Paragraph>
              Ditt brukernavn blir da: {value.replace(/\s/g, '').toLowerCase()}
            </Paragraph>
          </>
        )}
      </>
    );
  },
});

export const Disabled = meta.story({
  parameters: {
    customStyles: {
      display: 'flex',
      flexDirection: 'column',
      gap: 'var(--ds-size-2)',
    },
  },
  render: () => {
    return (
      <>
        <Textfield
          id="textfield-disabled"
          label="Disabled Textfield"
          disabled
        />
        <Textfield
          id="multiline-textfield-disabled"
          label="Disabled multiline Textfield"
          multiline
          rows={4}
          disabled
        />
      </>
    );
  },
});

export const ReadOnly = meta.story({
  parameters: {
    customStyles: {
      display: 'flex',
      flexDirection: 'column',
      gap: 'var(--ds-size-2)',
    },
  },
  render: () => {
    return (
      <>
        <Textfield
          id="textfield-readonly"
          label="ReadOnly Textfield"
          readOnly
        />
        <Textfield
          id="multiline-textfield-readonly"
          label="ReadOnly multiline Textfield"
          multiline
          rows={4}
          readOnly
        />
      </>
    );
  },
});

export const Focused = meta.story({
  args: Preview.input.args,
  parameters: {
    pseudo: {
      focusVisible: true,
    },
  },
});
