// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Affix 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="textfield-affix"
  >
    Hvor mange kroner koster det per måned?
  </label>
  <div>
    <span aria-hidden="true">
      NOK
    </span>
    <input
      id="textfield-affix"
      inputmode="numeric"
      type="text"
    >
    <span aria-hidden="true">
      pr. mnd
    </span>
  </div>
</ds-field>
`;

exports[`Controlled 1`] = `
<div style="display: flex; gap: var(--ds-size-2); align-items: end; width: 100%;">
  <ds-field style="flex-grow: 1;">
    <label
      data-weight="medium"
      for="textfield-controlled"
    >
      Fullt navn
    </label>
    <div>
      <input
        id="textfield-controlled"
        type="text"
        value
      >
    </div>
  </ds-field>
  <button
    data-variant="secondary"
    type="button"
  >
    Tøm feltet
  </button>
</div>
`;

exports[`Counter 1`] = `
<ds-field>
  <label data-weight="medium">
    Legg til en beskrivelse
  </label>
  <div>
    <textarea
      id="textfield-counter"
      rows="4"
    >
    </textarea>
  </div>
  <p
    data-field="counter"
    data-limit="75"
  >
  </p>
</ds-field>
`;

exports[`Disabled 1`] = `
<ds-field>
  <label data-weight="medium">
    Disabled Textfield
  </label>
  <div>
    <input
      id="textfield-disabled"
      disabled
      type="text"
    >
  </div>
</ds-field>
<ds-field>
  <label data-weight="medium">
    Disabled multiline Textfield
  </label>
  <div>
    <textarea
      id="multiline-textfield-disabled"
      rows="4"
      disabled
    >
    </textarea>
  </div>
</ds-field>
`;

exports[`Focused 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="textfield-preview"
  >
    Label
  </label>
  <div>
    <input
      id="textfield-preview"
      type="text"
    >
  </div>
</ds-field>
`;

exports[`Format 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="format"
  >
    Fødselsnummer
  </label>
  <div>
    <input
      id="format"
      inputmode="numeric"
      type="text"
    >
  </div>
</ds-field>
`;

exports[`Preview 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="textfield-preview"
  >
    Label
  </label>
  <div>
    <input
      id="textfield-preview"
      type="text"
    >
  </div>
</ds-field>
`;

exports[`Read Only 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="textfield-readonly"
  >
    ReadOnly Textfield
  </label>
  <div>
    <input
      id="textfield-readonly"
      readonly
      type="text"
    >
  </div>
</ds-field>
<ds-field>
  <label
    data-weight="medium"
    for="multiline-textfield-readonly"
  >
    ReadOnly multiline Textfield
  </label>
  <div>
    <textarea
      id="multiline-textfield-readonly"
      rows="4"
      readonly
    >
    </textarea>
  </div>
</ds-field>
`;

exports[`Rows 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="textfield-rows"
  >
    Beskrivelse
  </label>
  <div>
    <textarea
      rows="4"
      id="textfield-rows"
    >
    </textarea>
  </div>
</ds-field>
`;
